--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <source src="videos/real-estate.ogv" type="video/ogg">
       Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
     </video>
+    </figure>
 </section>
 <footer>
     &copy; 2014 Exceptional Realty Group. All Rights Reserved.
